# promptops

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
benchmarks/: README.md  RESULTS.md  run_aws_benchmark.py
src/promptops/: __init__.py
src/promptops/cache/: __init__.py  response_cache.py
src/promptops/cli/: main.py
src/promptops/core/: __init__.py  client.py  prompt.py  resolver.py  result.py  schema.py  version.py
src/promptops/experiments/: __init__.py  analyzer.py  experiment.py  router.py  significance.py
src/promptops/graph/: __init__.py  dependency_graph.py
src/promptops/linting/: __init__.py  rules.py
src/promptops/migration/: __init__.py  migrator.py
src/promptops/models/: __init__.py  comparison.py  fallback.py  optimizer.py  pricing.py  router.py
src/promptops/observability/: __init__.py  alerts.py  analytics.py  audit.py  drift.py  quotas.py
src/promptops/promotion/: __init__.py  environments.py  manager.py  rollback.py
src/promptops/scoring/: __init__.py  quality_scorer.py  token_profiler.py
src/promptops/testing/: __init__.py  adversarial.py  assertions.py  breaking_changes.py  evaluators.py  golden.py  golden_snapshot.py  runner.py
src/promptops/versioning/: __init__.py  diff.py
tests/: test_adversarial.py  test_breaking_changes.py  test_client.py  test_dependency_graph.py  test_diff.py  test_evaluators.py  test_experiments.py  test_golden_snapshot.py  test_linting.py  test_migrator.py  test_models.py  test_observability.py  test_promotion.py  test_prompt.py  test_quality_scorer.py  test_response_cache.py  test_significance.py  test_token_profiler.py  test_version.py
ts-src/: package-lock.json  package.json  tsconfig.json
ts-src/src/: client.ts  index.ts  prompt.ts  schema.ts  testing.ts  version.ts
